@@ -691,9 +691,8 @@ class VectorTemplate extends QuickTemplate {
 			echo "\n<!-- {$name} -->\n";
 			switch ( $element ) {
 				case 'NAMESPACES':
-					if ( count( $this->data[ 'namespace_urls' ] ) > 0 ) {
 ?>
-<div id="namespaces" class="vectorTabs">
+<div id="namespaces" class="vectorTabs<?php if ( count( $this->data['namespace_urls'] ) == 0 ) echo ' emptyPortlet'; ?>">
 	<h5><?php $this->msg('namespaces') ?></h5>
 	<ul <?php $this->html('userlangattributes') ?>>
 		<?php foreach ($this->data['namespace_urls'] as $key => $link ): ?>
@@ -702,12 +701,10 @@ class VectorTemplate extends QuickTemplate {
 	</ul>
 </div>
 <?php
-					}
 				break;
 				case 'VARIANTS':
-					if ( count( $this->data[ 'variant_urls' ] ) > 0 ) {
 ?>
-<div id="variants" class="vectorMenu">
+<div id="variants" class="vectorMenu<?php if ( count( $this->data['variant_urls'] ) == 0 ) echo ' emptyPortlet'; ?>">
 	<h5><span><?php $this->msg('variants') ?></span><a href="#"></a></h5>
 	<div class="menu">
 		<ul <?php $this->html('userlangattributes') ?>>
@@ -718,12 +715,10 @@ class VectorTemplate extends QuickTemplate {
 	</div>
 </div>
 <?php
-					}
 				break;
 				case 'VIEWS':
-					if ( count( $this->data[ 'view_urls' ] ) > 0 ) {
 ?>
-<div id="views" class="vectorTabs">
+<div id="views" class="vectorTabs<?php if ( count( $this->data['view_urls'] ) == 0 ) echo ' emptyPortlet'; ?>">
 	<h5><?php $this->msg('views') ?></h5>
 	<ul <?php $this->html('userlangattributes') ?>>
 		<?php foreach ($this->data['view_urls'] as $key => $link ): ?>
@@ -732,12 +727,10 @@ class VectorTemplate extends QuickTemplate {
 	</ul>
 </div>
 <?php
-					}
 				break;
 				case 'ACTIONS':
-					if ( count( $this->data[ 'action_urls' ] ) > 0 ) {
 ?>
-<div id="p-cactions" class="vectorMenu">
+<div id="p-cactions" class="vectorMenu<?php if ( count( $this->data['action_urls'] ) == 0 ) echo ' emptyPortlet'; ?>">
 	<h5><span><?php $this->msg('actions') ?></span><a href="#"></a></h5>
 	<div class="menu">
 		<ul <?php $this->html('userlangattributes') ?>>
@@ -748,12 +741,10 @@ class VectorTemplate extends QuickTemplate {
 	</div>
 </div>
 <?php
-					}
 				break;
 				case 'PERSONAL':
-					if ( count( $this->data['personal_urls'] ) > 0 ) {
 ?>
-<div id="p-personal">
+<div id="p-personal" class="<?php if ( count( $this->data['personal_urls'] ) == 0 ) echo ' emptyPortlet'; ?>">
 	<h5><?php $this->msg('personaltools') ?></h5>
 	<ul <?php $this->html('userlangattributes') ?>>
 		<?php foreach($this->data['personal_urls'] as $key => $item): ?>
@@ -762,7 +753,6 @@ class VectorTemplate extends QuickTemplate {
 	</ul>
 </div>
 <?php
-					}
 				break;
 				case 'SEARCH':
 ?>
